--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Comment BOX</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
+    <h1>Comment BOX</h1>
+    <div id="commentBox">
+        <input type="text" name="username" id="userInput" autocomplete="off" placeholder="UserName: ">
+        <textarea id="commentInput" placeholder="Type your comment here:" rows="5" cols="30" type="text"></textarea>
+        <button id="sendBtn">Send</button>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
